syntax = "proto3";

option go_package = "github.com/scjudd/battleship/proto";

package battleship;

service Battleship {
  rpc NewGame(NewGameRequest) returns (NewGameResponse) {}
  rpc JoinGame(JoinGameRequest) returns (JoinGameResponse) {}
  rpc PlaceShip(PlaceShipRequest) returns (PlaceShipResponse) {}
}

message NewGameRequest {
}

message NewGameResponse {
  string gameID = 1;
  string playerID = 2;
}

message JoinGameRequest {
  string gameID = 1;
}

message JoinGameResponse {
  string playerID = 1;
}

message PlaceShipRequest {
  string gameID = 1;
  string playerID = 2;
  string shipName = 3;
  int32 x = 4;
  int32 y = 5;
  bool vertical = 6;
}

message PlaceShipResponse {
}
